@@ -33,7 +33,3 @@ public class Main extends Application {
 		launch(args);
 	}
 }
-/*
---module-path="C:\Program Files\Java\javafx-sdk-11.0.2\lib"
---add-modules=javafx.controls,javafx.fxml
-*/
